# TichPhong-Share

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  udp_listen.rs  udp_send.rs  udp_test.py
.github/workflows/: build-linux.yml  build-windows.yml  deploy-pages.yml
docs/: CNAME  index.html  package-lock.json  package.json
docs/public/: CNAME  c.html  privacy.html  terms.html
docs/src/: App.tsx  index.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  mdns_test.rs  tauri.conf.json  test_reqwest.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/qrc_webapp/: index.html
src-tauri/rqs_lib/: Cargo.toml
src-tauri/rqs_lib/src/: lib.rs  utils.rs
src-tauri/rqs_lib/src/hdl/: blea.rs  inbound.rs  mdns.rs  mdns_discovery.rs  outbound.rs
src-tauri/src/: lib.rs  main.rs  qrc.rs
src-tauri/windows/: hooks.nsh  installer.nsi
