[package]
name = "tich-phong-share"
version = "2.0.0"
description = "Ứng dụng chia sẻ file nhanh chóng đa nền tảng cho TichPhongOS"
authors = ["TichPhongOS Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "share_src_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
tokio = { version = "1.52.3", features = ["full"] }
mdns-sd = "0.20.0"
local-ip-address = "0.6.13"
directories = "6.0.0"
tower-http = { version = "0.6.11", features = ["cors"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "multipart"] }
tauri-plugin-dialog = "2.0.0"
uuid = { version = "1.23.2", features = ["v4"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
chrono = "0.4.35"
rqs_lib = { path = "./rqs_lib", features = ["bluer", "btleplug", "experimental"] }
tauri-plugin-notification = "2.3.3"
warp = { version = "0.3", features = ["default"] }
dav-server = { version = "0.11.0", features = ["warp-compat"] }
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "tokio-fs"] }
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
